Fix unit undefined issue

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,5 +3,6 @@ DB_PORT=5432
 DB_NAME=kafka_metrics_db
 DB_USER=your_username
 DB_PASSWORD=your_password
+DB_SCHEMA_PATH=-c search_path=metrics,public
 NODE_ENV=development
 PORT=5000
