--- a/deployment/Dockerfile.frontend
+++ b/deployment/Dockerfile.frontend
@@ -7,11 +7,19 @@ WORKDIR /app
 # Copy package files
 COPY frontend/package*.json ./
 
-# Install dependencies
-RUN npm ci
+# Copy source code files first
+COPY frontend/src ./src
+COPY frontend/index.html ./
+COPY frontend/vite.config.js ./
+COPY frontend/postcss.config.js ./
+COPY frontend/tailwind.config.js ./
 
-# Copy source code
-COPY frontend/ .
+# Option 1: Copy pre-built Alpine node_modules tarball and extract (for offline/air-gapped builds - CURRENT)
+COPY frontend/node_modules-linux.tar.gz ./
+RUN tar -xzf node_modules-linux.tar.gz && rm node_modules-linux.tar.gz
+
+# Option 2: Download packages during build (uncomment if internet is available)
+# RUN npm ci
 
 # Build the application
 RUN npm run build
@@ -25,17 +33,13 @@ COPY deployment/nginx.conf /etc/nginx/nginx.conf
 # Copy built app from builder stage
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Create non-root user
-RUN addgroup -g 1001 -S nginx
-RUN adduser -S nginx -u 1001
-
-# Change ownership
-RUN chown -R nginx:nginx /usr/share/nginx/html
-RUN chown -R nginx:nginx /var/cache/nginx
-RUN chown -R nginx:nginx /var/log/nginx
-RUN chown -R nginx:nginx /etc/nginx/conf.d
-RUN touch /var/run/nginx.pid
-RUN chown -R nginx:nginx /var/run/nginx.pid
+# nginx user already exists in nginx:alpine, just set permissions
+RUN chown -R nginx:nginx /usr/share/nginx/html && \
+    chown -R nginx:nginx /var/cache/nginx && \
+    chown -R nginx:nginx /var/log/nginx && \
+    chown -R nginx:nginx /etc/nginx/conf.d && \
+    touch /var/run/nginx.pid && \
+    chown -R nginx:nginx /var/run/nginx.pid
 
 USER nginx
 
