--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -2,55 +2,44 @@ version: '3.8'
 
 services:
   backend:
-    build:
-      context: ..
-      dockerfile: deployment/Dockerfile.backend
+    image: metric-dashboard-backend:latest
+    container_name: metric-dashboard-backend
     ports:
       - "5000:5000"
     environment:
-      - NODE_ENV=development
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - DB_NAME=kafka_metrics
-      - DB_USER=kafka_user
-      - DB_PASSWORD=kafka_password
-      - PORT=5000
-    depends_on:
-      - postgres
-    networks:
-      - kafka-dashboard-network
+      # Database connection - using host.docker.internal to access Windows PostgreSQL
+      DB_HOST: host.docker.internal
+      DB_PORT: 5432
+      DB_NAME: kafka_metrics
+      DB_USER: kafka_user
+      DB_PASSWORD: admin
+      NODE_ENV: development
+      PORT: 5000
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:5000/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
+      start_period: 10s
 
   frontend:
-    build:
-      context: ..
-      dockerfile: deployment/Dockerfile.frontend
+    image: metric-dashboard-frontend:latest
+    container_name: metric-dashboard-frontend
     ports:
       - "8080:8080"
     depends_on:
       - backend
-    networks:
-      - kafka-dashboard-network
     restart: unless-stopped
-
-  postgres:
-    image: postgres:15-alpine
-    environment:
-      - POSTGRES_DB=kafka_metrics
-      - POSTGRES_USER=kafka_user
-      - POSTGRES_PASSWORD=kafka_password
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ../backend/init.sql:/docker-entrypoint-initdb.d/init.sql
-    networks:
-      - kafka-dashboard-network
-    restart: unless-stopped
-
-volumes:
-  postgres_data:
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
+      start_period: 5s
 
 networks:
-  kafka-dashboard-network:
-    driver: bridge
+  default:
+    name: metric-dashboard-network
