--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -45,7 +45,7 @@ http {
 
         # API proxy to backend
         location /api/ {
-            proxy_pass http://kafka-dashboard-backend:5000/api/;
+            proxy_pass http://backend:5000/api/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
