--- a/deployment/Dockerfile.frontend
+++ b/deployment/Dockerfile.frontend
@@ -33,15 +33,25 @@ COPY deployment/nginx.conf /etc/nginx/nginx.conf
 # Copy built app from builder stage
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# nginx user already exists in nginx:alpine, just set permissions
-RUN chown -R nginx:nginx /usr/share/nginx/html && \
+# Create nginx cache directories and set proper permissions
+RUN mkdir -p /var/cache/nginx/client_temp \
+             /var/cache/nginx/proxy_temp \
+             /var/cache/nginx/fastcgi_temp \
+             /var/cache/nginx/uwsgi_temp \
+             /var/cache/nginx/scgi_temp && \
+    chown -R nginx:nginx /usr/share/nginx/html && \
     chown -R nginx:nginx /var/cache/nginx && \
     chown -R nginx:nginx /var/log/nginx && \
     chown -R nginx:nginx /etc/nginx/conf.d && \
+    chown nginx:nginx /etc/nginx/nginx.conf && \
     touch /var/run/nginx.pid && \
-    chown -R nginx:nginx /var/run/nginx.pid
+    chown -R nginx:nginx /var/run/nginx.pid && \
+    chmod 755 /var/cache/nginx && \
+    chmod 755 /var/cache/nginx/* && \
+    chmod 644 /etc/nginx/nginx.conf
 
-USER nginx
+# Note: nginx must run as root to read config and bind to ports
+# The worker processes will run as nginx user (defined in nginx.conf)
 
 # Expose port
 EXPOSE 8080
@@ -50,5 +60,5 @@ EXPOSE 8080
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD wget --no-verbose --tries=1 --spider http://localhost:8080/ || exit 1
 
-# Start nginx
+# Start nginx (runs as root, workers run as nginx user)
 CMD ["nginx", "-g", "daemon off;"]
