--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -45,12 +45,20 @@ http {
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
         add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
 
-        # Handle React Router
-        location / {
-            try_files $uri $uri/ /index.html;
+        # API proxy to backend - handle both with and without base path
+        location /app-metrics-dashboard/api/ {
+            proxy_pass http://backend:5000/api/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
         }
 
-        # API proxy to backend
+        # API proxy for local development (without base path)
         location /api/ {
             proxy_pass http://backend:5000/api/;
             proxy_http_version 1.1;
@@ -61,6 +69,17 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
+        }
+
+        # Serve static files from base path
+        location /app-metrics-dashboard/ {
+            alias /usr/share/nginx/html/;
+            try_files $uri $uri/ /index.html;
+        }
+
+        # Handle React Router (root path for local dev)
+        location / {
+            try_files $uri $uri/ /index.html;
         }
 
         # Static assets caching
