--- a/deployment/Dockerfile.frontend
+++ b/deployment/Dockerfile.frontend
@@ -33,21 +33,12 @@ COPY deployment/nginx.conf /etc/nginx/nginx.conf
 # Copy built app from builder stage
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Create nginx cache directories and set proper permissions
-RUN mkdir -p /var/cache/nginx/client_temp \
-             /var/cache/nginx/proxy_temp \
-             /var/cache/nginx/fastcgi_temp \
-             /var/cache/nginx/uwsgi_temp \
-             /var/cache/nginx/scgi_temp && \
-    chown -R nginx:nginx /usr/share/nginx/html && \
-    chown -R nginx:nginx /var/cache/nginx && \
+# Set proper permissions for nginx
+# Note: /var/cache/nginx and /var/run will be mounted as emptyDir volumes in Kubernetes
+RUN chown -R nginx:nginx /usr/share/nginx/html && \
     chown -R nginx:nginx /var/log/nginx && \
     chown -R nginx:nginx /etc/nginx/conf.d && \
     chown nginx:nginx /etc/nginx/nginx.conf && \
-    touch /var/run/nginx.pid && \
-    chown -R nginx:nginx /var/run/nginx.pid && \
-    chmod 755 /var/cache/nginx && \
-    chmod 755 /var/cache/nginx/* && \
     chmod 644 /etc/nginx/nginx.conf
 
 # Note: nginx must run as root to read config and bind to ports
