--- a/deployment/aks/04-frontend-deployment.yaml
+++ b/deployment/aks/04-frontend-deployment.yaml
@@ -26,6 +26,11 @@ spec:
         - containerPort: 8080
           name: http
           protocol: TCP
+        volumeMounts:
+        - name: nginx-cache
+          mountPath: /var/cache/nginx
+        - name: nginx-run
+          mountPath: /var/run
         resources:
           requests:
             memory: "128Mi"
@@ -60,6 +65,11 @@ spec:
             - SETGID
             - SETUID
             - NET_BIND_SERVICE
+      volumes:
+      - name: nginx-cache
+        emptyDir: {}
+      - name: nginx-run
+        emptyDir: {}
 ---
 apiVersion: v1
 kind: Service
