--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -58,6 +58,21 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
+        # Serve static assets with caching (must come before general location)
+        location ~ ^/app-metrics-dashboard/.*\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            rewrite ^/app-metrics-dashboard/(.*) /$1 break;
+            root /usr/share/nginx/html;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
+        # Serve static files from base path - rewrite to remove base path
+        location /app-metrics-dashboard/ {
+            rewrite ^/app-metrics-dashboard/(.*) /$1 break;
+            root /usr/share/nginx/html;
+            try_files $uri $uri/ /index.html;
+        }
+
         # API proxy for local development (without base path)
         location /api/ {
             proxy_pass http://backend:5000/api/;
@@ -71,21 +86,9 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        # Serve static files from base path
-        location /app-metrics-dashboard/ {
-            alias /usr/share/nginx/html/;
-            try_files $uri $uri/ /index.html;
-        }
-
         # Handle React Router (root path for local dev)
         location / {
             try_files $uri $uri/ /index.html;
-        }
-
-        # Static assets caching
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
         }
 
         # Health check endpoint
